--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,8 @@
 # SPDX-License-Identifier: LGPL-2.1+
 #
 
+ACLOCAL_AMFLAGS	= -I m4 ${ACLOCAL_FLAGS}
+
 SUBDIRS		= src tests
 EXTRA_DIST	= autogen.sh autogen-clean.sh
 
