--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: LGPL-2.1+
 #
 
-#AM_CFLAGS = -Wall -pedantic
+AM_CFLAGS = -Wall -pedantic
 
 lib_LTLIBRARIES = libfronius.la
 libfronius_la_SOURCES = \
